--- a/KetoSavageWeb/KetoSavageWeb/Web.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.config
@@ -16,7 +16,7 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="KetoSavageWeb.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
-  </configSections>
+  <section name="web.optimization" type="Web.Optimization.Configuration.OptimizationSection" /></configSections>
   <connectionStrings>
     <!--<add name="ApplicationServices" connectionString="data source=13-01-0110;Initial Catalog=KSData;User ID=KS;Password=S4v4g3*18;MultipleActiveResultSets=True;connect timeout=120" providerName="System.Data.SqlClient"/>-->
     <!--<add name="ApplicationServices" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security=True" providerName="System.Data.SqlClient" />-->
@@ -142,7 +142,7 @@
     <httpRuntime maxRequestLength="4096" requestValidationMode="4.0" executionTimeout="110" targetFramework="4.5" />
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
@@ -208,6 +208,14 @@
         <assemblyIdentity name="DevExtreme.AspNet.Data" publicKeyToken="982f5dab1439d0f7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.4.7.0" newVersion="1.4.7.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.3.0" newVersion="3.3.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <devExpress>
@@ -216,7 +224,7 @@
       <add type="DevExtreme" />
     </resources>
     <themes enableThemesAssembly="true" styleSheetTheme="" theme="KetoSavage" customThemeAssemblies="KetoSavageTheme" baseColor="" font="" />
-    <compression enableHtmlCompression="false" enableCallbackCompression="true" enableResourceCompression="true" enableResourceMerging="true" />
+    <compression enableHtmlCompression="true" enableCallbackCompression="true" enableResourceCompression="true" enableResourceMerging="true" />
     <settings accessibilityCompliant="false" bootstrapMode="" doctypeMode="Html5" rightToLeft="false" checkReferencesToExternalScripts="true" protectControlState="true" ieCompatibilityVersion="edge" />
     <errors callbackErrorRedirectUrl="" />
   </devExpress>
@@ -245,4 +253,28 @@
       </setting>
     </KetoSavageWeb.Properties.Settings>
   </applicationSettings>
-</configuration>
+<web.optimization>
+    <bundles>
+      <bundle virtualPath="~/Content/sample" transform="System.Web.Optimization.JsMinify, System.Web.Optimization">
+        <content>
+          <!-- Add some single files -->
+          <!-- <add path="~/Scripts/validation.js" /> -->
+          <!-- <add path="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.2.min.js" /> -->          
+
+          <!-- Add a directory (and its subdirectories) -->
+          <!-- <add path="~/Scripts/Plugins" searchPattern="*.js" searchSubdirectories="true" /> -->
+        </content>
+        
+        <!--
+        If you want to apply multiple transformations, 
+        you should remove the "transform" attribute from the bundle. 
+        -->
+        <!--
+        <transformations>
+          <add type="Web.Optimization.Bundles.CoffeeScript.CoffeeScriptTransform, Web.Optimization.Bundles.CoffeeScript" />
+          <add type="System.Web.Optimization.JsMinify, System.Web.Optimization" />
+        </transformations>
+        -->
+      </bundle>
+    </bundles>
+  </web.optimization></configuration>
