--- a/KetoSavageWeb/KetoSavageWeb/packages.config
+++ b/KetoSavageWeb/KetoSavageWeb/packages.config
@@ -32,6 +32,9 @@
   <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="Web.Optimization" version="0.0.7" targetFramework="net452" />
+  <package id="Web.Optimization.Bundles.AjaxMin" version="0.0.8" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net45" />
+  <package id="WebApiContrib.IoC.Ninject" version="0.9.3.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
