--- a/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
+++ b/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
@@ -1361,6 +1361,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Manage\_personalInfo.cshtml" />
     <Content Include="Views\ManageUsers\_dxUserGrid.cshtml" />
+    <Content Include="Views\ManageNews\_dxNewsGrid.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -1391,6 +1392,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ManageNewsController.cs" />
     <Compile Include="Controllers\ManageUsersAPIController.cs" />
+    <Compile Include="Controllers\NewsAPIController.cs" />
     <Compile Include="Controllers\ProgramApiController.cs" />
     <Compile Include="Controllers\ProgressApiController.cs" />
     <Compile Include="Controllers\UserProgramsController.cs" />
