Enabled caching and tweaked the macro grid

--- a/KetoSavageWeb/KetoSavageWeb/Web.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.config
@@ -142,6 +142,14 @@
     <httpRuntime maxRequestLength="4096" requestValidationMode="4.0" executionTimeout="110" targetFramework="4.5" />
   </system.web>
   <system.webServer>
+    <caching enabled="true" enableKernelCache="true">
+      <profiles>
+        <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange"/>
+        <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange"/>
+        <add extension=".png" policy="CacheUntilCharge" kernelCachePolicy="CacheUntilChange"/>
+        <add extension=".ico" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange"/>
+      </profiles>      
+    </caching>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />
