--- a/KetoSavageWeb/KetoSavageWeb/Web.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.config
@@ -142,12 +142,12 @@
     <httpRuntime maxRequestLength="4096" requestValidationMode="4.0" executionTimeout="110" targetFramework="4.5" />
   </system.web>
   <system.webServer>
-    <caching enabled="true" enableKernelCache="true">
+    <caching enabled="true">
       <profiles>
-        <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange"/>
-        <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange"/>
-        <add extension=".png" policy="CacheUntilCharge" kernelCachePolicy="CacheUntilChange"/>
-        <add extension=".ico" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange"/>
+        <add extension=".js" policy="CacheUntilChange"/>
+        <add extension=".css" policy="CacheUntilChange"/>
+        <add extension=".png" policy="CacheUntilChange"/>
+        <add extension=".ico" policy="CacheUntilChange"/>
       </profiles>      
     </caching>
     <validation validateIntegratedModeConfiguration="false" />
